--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>WeekPlan</title>
+    <script>
+      document.addEventListener('focusin', function (e) {
+        if (e.target.tagName === 'TEXTAREA') {
+          document.body.style.zoom = 1.0;
+        }
+      });
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
